# ideasearch-fit-demo

./: .gitignore  ARCHITECTURE.md  README.md  api_keys.json.example  app.py  demo.py  environment.yml  pyproject.toml  run.sh
src/: __init__.py
src/components/: __init__.py  api_progress.py  canvas.py  config.py  results.py
src/config/: default.yaml
src/config/translations/: en_US.json  zh_CN.json
src/core/: __init__.py  fitting.py
src/utils/: __init__.py  i18n.py
