[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ideasearch-streamlit-app"
version = "0.1.0"
description = "Streamlit web application for IdeaSearch fitting"
readme = "README.md"
license = "MIT"
authors = [
    { name = "IdeaSearch Team" },
]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "streamlit-drawable-canvas>=0.9.2",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "pywheels>=0.7.6.2",
    "ideasearch>=0.0.1",
    "ideasearch-fit>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ideasearch-app = "src.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
only-include = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
